@@ -14,6 +14,7 @@ The following changes have been made to the Win32++ code:
 Added CDC class 
 Added CSplitter::SetImmediate
 Added CSplitter::SetVertical
+Added CWnd::GetDlgItemText
 Added CWnd::GetWindowText
 
 Changed CSplitter::CSplitter 	now requires no arguements
